충남대 BE_이경빈_4주차 과제 (2단계) (#299)
* feat: 7/18 코드리뷰 반영 (누락된 엔티티 길이 제한 추가)

* refactor: 7/18 코드리뷰 반영 (상수 클래스 분리)

* refactor: 7/18 코드리뷰 반영 (AdminController 분리)

* refactor: 코드 컨벤션 준수

* feat: 참조 무결성 제약조건 위반 예외처리

* refactor: 7/18 코드리뷰 반영 (DTO 분리)

* docs(README.md): 4주차 2단계 프로젝트 개요, 기능 목록 작성

* refactor: 상수 네이밍 일관성 유지

* feat: 상품 엔티티와 옵션 엔티티 연관관계 매핑

* feat: product DTO 수정 및 option DTO 구현

* feat: 옵션 CRUD API 구현

* fix: 기능 요구사항 준수 (옵션 검증 추가)

* test: 옵션 관련 테스트 추가 및 기존 테스트 수정

* fix: 상품 엔티티와 옵션 엔티티 단방향 관계로 변경

* test: 연관관계 매핑 변경에 따른 테스트 수정